# pyride_pr2

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  annotated.html  classPyPR2-members.html  classPyPR2.html  classes.html  functions.html  functions_func.html  index.html  mainpage.dox  manifest.xml  package.xml  pages.html  pyride.dox  pyrideconfig.xml  todo.html
include/: AppConfigManager.h  AudioFeedbackStream.h  AudioObject.h  DeviceController.h  PR2ProxyManager.h  PyModuleStub.h  PyPR2Module.h  PyPR2Server.h  PyRideCommon.h  PyRideCustom.h  PyRideNetComm.h  PythonServer.h  ServerDataProcessor.h  VideoObject.h  jdatabufferdst.h
include/ccrtp/: channel.h
launch/: pyride.launch  pyride_debug.launch
misc/: ipytrigger.py  ipytrigger2
misc/pyride/: kernel.json
msg/: NodeStatus.msg
scripts/: extprocall.py  iksresolver.py  ipkspawner.py  pr2actions.py  py_main.py  quat_math.py  tininfo.py  tinstate.py
scripts/embedded_scripts/: constants.py  messenger.py  pr2actions.py  py_main.py  tinmind.py
scripts/embedded_scripts/timers/: __init__.py
scripts/timers/: timerclient.py  timermanager.py
search/: all_61.js  all_62.js  all_63.js  all_64.js  all_67.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_75.js  classes_70.js  functions_63.js  functions_67.js  functions_69.js  functions_6c.js  functions_6d.js  functions_70.js  functions_72.js  functions_73.js  functions_74.js  functions_75.js  search.js
src/: AppConfigManager.cpp  AudioFeedbackStream.cpp  AudioObject.cpp  DeviceController.cpp  PR2ProxyManager.cpp  PyModulePyCommon.cpp  PyModuleStub.cpp  PyPR2Module.cpp  PyPR2Server.cpp  PyRideCommon.cpp  PyRideNetComm.cpp  PythonServer.cpp  ServerDataProcessor.cpp  VideoObject.cpp  jdatabufferdst.cpp  main.cpp
src/pyride_pr2/msg/: _NodeStatus.py  __init__.py
